Fixing an issue where the page edit buttons dissappear on mobile

--- a/ui/src/main/frontend/src/scss/editor.scss
+++ b/ui/src/main/frontend/src/scss/editor.scss
@@ -58,6 +58,9 @@
 		overflow: hidden;
 		z-index: 998;
 		padding-top: 8px;
+		@media screen and (max-width: $tablet) {
+			top: 104px;
+		}
 	}
 	.sling-cms-logo {
 		height: 25px;
